--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/00_domain_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/00_domain_guide.mdx
@@ -6,20 +6,20 @@ id: "domains_guide"
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
 
-Looking for information on managing research data in chemistry? Choose your chemical domain and find discipline-specific help on research data management.
+Sie suchen nach Informationen zur Verwaltung von Forschungsdaten in der Chemie? Wählen Sie Ihr chemisches Fachgebiet und finden Sie disziplinspezifische Hilfe zum Forschungsdatenmanagement.
 
 :::info Info:
-The domain-specific profiles provide an overview of the individual RDM steps. The following topics are presented in detail:
+Die bereichsspezifischen Profile geben einen Überblick über die einzelnen FDM-Schritte. Die folgenden Themen werden im Detail vorgestellt:
 
-- summary of domain-specific profile
-- type of experiments
-- planning of experiments
-- documentation of experiments
-- data producing methods (including a table with recommendations on interoperable open file formats)
-- data analysis
-- publication of research data
+- Zusammenfassung des bereichsspezifischen Profils
+- Art der Experimente
+- Planung von Experimenten
+- Dokumentation der Experimente
+- Methoden der Datenerzeugung (einschließlich einer Tabelle mit Empfehlungen für interoperable offene Dateiformate)
+- Datenanalyse
+- Veröffentlichung von Forschungsdaten
 :::
 
-Click on a button below to get started with your chemical domain. The domain-specific profiles will be continuously updated based on new developments and feedback.
+Klicken Sie auf eine der unten stehenden Schaltflächen, um mit Ihrem Chemiebereich zu beginnen. Die bereichsspezifischen Profile werden laufend auf der Grundlage neuer Entwicklungen und Rückmeldungen aktualisiert.
 
 <N4CFeatures feature="domains" />
