--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/10_analytical_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/10_analytical_chemistry.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Analytical Chemistry"
+title: "Analytische Chemie"
 nfdi4chem-id: dac
-slug: "/analytical_chemistry"
+slug: "/analytische_chemie"
 ---
 
 import Methods from '@site/src/components/Methods.js';
@@ -12,76 +12,71 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 
 :::info Summary:
 
-Analytical chemistry is one of the oldest scientific disciplines and an interdisciplinary science, combining methods of physical, inorganic and organic chemistry. Analytical chemistry aims to acquire, process, and evaluate signals to qualify and quantify the composition and to unravel the structure of matter. The analytical chemist applies classical (wet) chemistry and instrumental methods for separation, identification (qualification) and quantification. The discipline is related to many research fields in life, environmental, earth, and engineering sciences, such as metabolomics, medicine, and geochemistry. <br/>
-A typical workflow begins with the conceptualisation of the research question, and the planning of experiments, methods, and surveys to evaluate the hypotheses. Surveys are utilised in life, environmental, and earth sciences to perform experiments and/or to obtain samples required to support the research (e.g., laboratory and field campaigns, cohort studies). Experiments are conducted and samples are processed applying existing or newly established methods along with recording of accompanying metadata. Analytical chemistry applies already in the experimental or sampling stage as conditions need to be controlled or metadata has to be acquired (e.g., pH, temperature, colour). Once the product of the experiment or sample processing is obtained, it is analysed with suitable direct or combined methods for identification and quantification. Processing and interpretation of the acquired research data and [metadata](/docs/metadata) support the answering of the research question and decisions for further experiments, research, and measures.
+Die analytische Chemie ist eine der ältesten wissenschaftlichen Disziplinen und eine interdisziplinäre Wissenschaft, die Methoden der physikalischen, anorganischen und organischen Chemie miteinander verbindet. Ziel der analytischen Chemie ist es, Signale zu erfassen, zu verarbeiten und auszuwerten, um die Zusammensetzung von Materie zu qualifizieren und zu quantifizieren und deren Struktur zu entschlüsseln. Der analytische Chemiker wendet klassische (nasse) Chemie und instrumentelle Methoden zur Trennung, Identifizierung (Qualifizierung) und Quantifizierung an. Die Disziplin ist mit vielen Forschungsbereichen in den Lebens-, Umwelt-, Geo- und Ingenieurwissenschaften verbunden, z. B. Metabolomik, Medizin und Geochemie.<br/>
+Ein typischer Arbeitsablauf beginnt mit der Formulierung der Forschungsfrage und der Planung von Experimenten, Methoden und Untersuchungen zur Bewertung der Hypothesen. Erhebungen werden in den Lebens-, Umwelt- und Geowissenschaften eingesetzt, um Experimente durchzuführen und/oder Proben zu gewinnen, die zur Unterstützung der Forschung benötigt werden (z. B. Labor- und Feldkampagnen, Kohortenstudien). Bei der Durchführung von Experimenten und der Bearbeitung von Proben werden bestehende oder neu etablierte Methoden angewandt und begleitende Metadaten aufgezeichnet. Die analytische Chemie findet bereits in der Versuchs- oder Probenahmephase Anwendung, da die Bedingungen kontrolliert oder Metadaten erfasst werden müssen (z. B. pH-Wert, Temperatur, Farbe). Sobald das Ergebnis des Experiments oder der Probenverarbeitung vorliegt, wird es mit geeigneten direkten oder kombinierten Methoden zur Identifizierung und Quantifizierung analysiert. Die Verarbeitung und Interpretation der gewonnenen Forschungsdaten und Metadaten unterstützen die Beantwortung der Forschungsfrage und Entscheidungen für weitere Experimente, Forschung und Maßnahmen.
 :::
 
-## Type of experiments for chemical analysis
+## Experiment-Arten der chemischen Analyse
 
-### Sampling
+### Probenahme
 
-- Collecting of materials for analysis
-- Transport and storage without alteration of samples
-- Small-scale experiments to develop / optimise approaches and equipment
-- Upscaling of methods to obtain sufficient material for a comprehensive analysis
+- Sammeln von Materialien für die Analyse
+- Transport und Lagerung ohne Veränderung der Proben
+- Versuche im kleinen Maßstab zur Entwicklung/Optimierung von Ansätzen und Geräten
+- Upscaling von Methoden, um genügend Material für eine umfassende Analyse zu erhalten
 
-### Sample processing
+### Verarbeitung von Proben
 
-- Preparation of the sample for analysis:
-    - Direct methods: no further treatment (e.g., pH, RFA, MALDI, direct infusion)
-    - Single methods:
-        - Dissolving
-        - Extraction
-        - Pulverising 
-    - Combined methods:
-        - Extraction and enrichment (e.g., solid-phase extraction, aqua regia digestion, volatilisation of solvents)
-        - Separation of interfering compounds (e.g., chromatography, precipitation)
-        - Chemical transforming in measurable form (e.g., complexing, derivatisation)
-- Small-scale experiments for screening / optimization of separation conditions and upscaling
+- Vorbereitung der Probe für die Analyse:
+    - Direkte Methoden: keine weitere Behandlung (z. B. pH, RFA, MALDI, direkte Infusion)
+    - Einzelne Methoden:
+        - Auflösen
+        - Extraktion
+        - Pulverisieren 
+    - Kombinierte Methoden:
+        - Extraktion und Anreicherung (z. B. Festphasenextraktion, Königswasseraufschluss, Verflüchtigung von Lösungsmitteln)
+        - Abtrennung von störenden Verbindungen (z. B. Chromatographie, Ausfällung)
+        - Chemische Umwandlung in messbare Form (z. B. Komplexierung, Derivatisierung)
+- Experimente im kleinen Maßstab zum Screening/Optimierung von Trennbedingungen und Upscaling
+- 
+### Bestimmung und Bewertung
+- Produktcharakterisierung mit praktikablen Methoden (z. B. NMR-Spektroskopie, Massenspektrometrie, IR-Spektroskopie, UV/vis-Spektroskopie, Elementaranalyse)
+    - zur Identifizierung von Analyten (gezielte und nicht gezielte)
+    - zur Bewertung der Zusammensetzung von Gemischen
+    - zur Quantifizierung von Analyten
 
-### Determination and evaluation
-- Product characterisation with feasible methods (e.g., NMR spectroscopy, mass spectrometry, IR spectroscopy, UV/vis spectroscopy, elemental analysis)
-    - to identify analytes (targeted and non-targeted)
-    - to assess the constitution of mixtures
-    - to quantify analytes
+## Planung von Experimenten
+- Neue und wiederverwendete Analysemethoden und Forschungsideen werden aus früheren Arbeiten der eigenen Forschungsgruppe, aus der wissenschaftlichen Literatur, aus in [Repositorien](/docs/repositories) veröffentlichten Datensätzen und aus den Anforderungen öffentlicher Ausschreibungen für Forschungs-, Entwicklungs- und Demonstrationsprojekte abgeleitet.
+- Die Versuchsplanung folgt einer logischen Reihenfolge, um ein bestimmtes Ziel zu erreichen, wie z. B. analytische Selektivität und Empfindlichkeit oder, im Falle einer nicht zielgerichteten Analyse (z. B. in der Metabolomik), eine Abdeckung eines breiten physikalisch-chemischen Bereichs von Analyten.
+- Die Planung wird durch das Hinzufügen der experimentellen Details abgeschlossen. Alle [Metadaten](/docs/metadata) werden in einem [ELN](/docs/eln) (z. B. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) einschließlich Referenzen [dokumentiert](/docs/data_documentation).
 
-## Planning of experiments
+## Dokumentation der Experimente
+- Die Dokumentation der Forschungsdaten und Metadaten erfolgt digital mit Hilfe eines ELN.
+- Die Versuchsbedingungen (z. B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN und, falls vorhanden, in einem Laborinformationssystem vermerkt.
+- Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. ohne Datendateien) werden manuell zum ELN-Eintrag des Versuchs hinzugefügt, der Temperaturen oder den pH-Wert (ggf. mit Metadaten) enthalten kann.
+- Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten für die instrumentelle Einrichtung.
+- Falls instrumentelle Metadaten nicht ohne Informationsverlust in ein offenes Format konvertierbar sind, müssen die Bedingungen im ELN dokumentiert werden.
+- Metadaten, die sich auf die erhaltenen Daten beziehen, wie z. B. Masse, Volumina oder Messlösungsmittel, müssen gemäß den [Metadatenstandards](/docs/format_standards) bereitgestellt werden.
 
-- New and reused analytical methods and research ideas are derived from previous work of the own research group, scientific literature, datasets published in [repositories](/docs/repositories), and requirements of public calls for research, development and demonstration projects.
-- Experimental design follows a logical order to achieve a specific goal, such as analytical selectivity and sensitivity, or in the case of a non-targeted analysis (e.g., in metabolomics), a coverage of a broad physical-chemical domain of analytes.
-- Planning is concluded by adding the experimental details. All [metadata](/docs/metadata) is [documented](/docs/data_documentation) in an [ELN](/docs/eln) (e.g., [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) including references.
-
-## Documentation of experiments
-
-- Documentation of research data and metadata is carried out digitally using an ELN.
-- Experimental conditions (e.g., solvents, temperature, duration, pressure) are noted in the ELN and if available a laboratory information system.
-- Observations and results of analytical methods with no digital output (i.e. no data files) are added manually to the ELN entry of the experiment, which may include temperatures, or the pH (with metadata where applicable).
-- Obtained data from analytical instruments (e.g., NMR, MS, or IR data) are uploaded to the Chemotion ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
-- In case instrumental metadata is not convertible to open format without information loss, conditions need to be documented in the ELN.
-- Metadata related to the obtained data, such as mass, volumes, or solvent of measurement, have to be provided according to [metadata standards](/docs/format_standards).
-
-## Data producing methods
-
-- Data can be collected during the experiment or after the experiment by analysing the obtained product.
-- Manually determined data: Experimental observations, mass, volumes, pH, etc.
-- Digital data are obtained with analytical instruments. An overview of file extensions, file sizes, and converters for several analytical methods is given in the table below.
-- Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the analytical device software. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
+## Methoden der Datenerfassung
+- Daten können während des Versuchs oder nach dem Versuch durch Analyse des gewonnenen Produkts erhoben werden.
+- Manuell ermittelte Daten: Experimentelle Beobachtungen, Masse, Volumen, pH-Wert usw.
+- Digitale Daten werden mit analytischen Instrumenten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
+- Rohdatendateien in proprietären Dateiformaten sollten neben interoperablen offenen Dateiformaten mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich in das ELN aufgenommen werden sollten.
 
 <Methods defaultProfile={"synthetic"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
 
-## Data analysis
+## Datenanalyse
+- Forschungsdaten können im [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) bearbeitet, analysiert und (auch mit Daten anderer Experimente) verglichen werden.
+- Optional ist eine Vorverarbeitung der digitalen Daten mit der Software des Analysegerätes möglich, bevor die Daten in das Chemotion ELN übertragen werden (vgl. Datenerstellungsmethoden).
+- Eine detaillierte Ansicht, Auswertung und Interpretation der Ergebnisse erfolgt mit den Funktionen des Chemotion ELN.
 
-- Research data can be processed, analysed and compared (also to data of other experiments) within the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html).
-- Optionally, preprocessing of digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
-- A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
+## Veröffentlichung von Forschungsdaten
+- Zusätzlich zu einem Forschungsartikel in einer wissenschaftlichen Zeitschrift werden die zugrundeliegenden Forschungsdaten in einem [Repositorium](/docs/repositories) [veröffentlicht](/docs/data_publication)  und mit dem Artikel verlinkt, um ein Forschungsdatenmanagement gemäß den [FAIR-Datengrundsätzen](/docs/fair) zu realisieren ([Best-Practice-Beispiele](/docs/best_practice)).
+- Die Veröffentlichung der Daten in einem Repositorium umfasst Rohdaten und verarbeitete Daten zur Wiederverwendung.
+- Die Nutzung des [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) ermöglicht einen direkten Transfer von Forschungsdaten und den dazugehörigen Metadaten in das [Chemotion Repositorium](https://www.chemotion-repository.net/welcome). Anschließend werden diese Daten automatisch mit anderen Repositorien, z.B. [PubChem](https://pubchem.ncbi.nlm.nih.gov/), geteilt. Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien, wie z.B. der [MassBank](https://massbank.eu/MassBank/) für Referenzmassenspektren, müssen die Daten aus dem Chemotion ELN exportiert und an die jeweilige Datenbank übermittelt werden.
+- Für einen Datensatz wird von einem Repositorium (z. B. [DataCite](https://datacite.org/) für das Chemotion Repositorium) ein [dauerhafter Identifikator](/docs/pid) (z. B. DOI) generiert, der in der Zeitschriftenpublikation oder in den entsprechenden Begleitinformationen angegeben wird, um die Datenveröffentlichung mit dem Manuskript zu verknüpfen.
 
-
-## Publication of research data
-
-- In addition to a research article in a scientific journal, the underlying research data are [published](/docs/data_publication) in a [repository](/docs/repositories) and linked to the article to realise research data management according to the [FAIR data principles](/docs/fair) ([Best practice examples](/docs/best_practice)).
-- Data publication in a repository includes raw and processed data for reuse.
-- The use of the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) enables a direct transfer of research data and the respective metadata to the [Chemotion Repository](https://www.chemotion-repository.net/welcome). Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [MassBank](https://massbank.eu/MassBank/) for reference mass spectra, data have to be exported from the Chemotion ELN and submitted to the respective database.
-- A [persistent identifier](/docs/pid) (e.g., DOI) is generated for a dataset by a repository (e.g., [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
