--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -9,58 +9,59 @@ import IntroButton from '@site/src/components/IntroButton.js';
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10"/>
 
-Die Wissensdatenbank NFDI4Chem bietet Informationen und Empfehlungen zur Digitalisierung aller wichtigen Schritte der Forschung in der Chemie, um Wissenschaftlerinnen und Wissenschaftler bei ihren Bemühungen um die Erfassung, Speicherung, Verarbeitung, Analyse, Veröffentlichung und Wiederverwendung von Forschungsdaten zu unterstützen. Diese Wissensdatenbank ist von RDMkit [RDMkit](https://rdmkit.elixir-europe.org/index.html) inspiriert, wurde aber speziell auf Chemikerinnen und Chemiker als Endnutzer zugeschnitten.
+The NFDI4Chem knowledge base provides information and recommendations to digitalise all key steps of chemical research to support scientists in their efforts to collect, store, process, analyse, publish, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
 
-Hier stellen Menschen, die tagtäglich in der Chemie arbeiten, Maßnahmen zur Förderung von [Open Science und Forschungsdatenmanagement](https://riojournal.com/article/55852/) im Einklang mit den FAIR-Datenprinzipien vor, diese reichen von der Planung und Umsetzung bis hin zur Veröffentlichung und Wiederverwendung.
+Actions to [promote Open Science and Research Data Management](https://riojournal.com/article/55852/) in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and reuse.
 
-## Warum ist FDM wichtig in der Chemie?
+## Why is RDM important for chemistry?
 
-:::Warnhinweis:                                
-Das Forschungsdatenmanagement in der Chemie ist derzeit nicht systematisch organisiert, und individuelle Lösungen einzelner Einrichtungen führen zu einer geringen Sichtbarkeit, Zugänglichkeit und Nutzbarkeit von Forschungsergebnissen. Der Mehrwert der Aufbewahrung und Erforschung wissenschaftlicher Daten in der Chemie ist besonders hoch, da die Bedeutung der Daten oft unbegrenzt ist, so dass ältere Daten für aktuelle Untersuchungen wiederverwendet werden können. In den meisten Fällen ist es sogar zwingend erforderlich, auf ältere Daten zugreifen zu können, da insbesondere experimentelle Daten oder komplexe Simulationsdaten nur mit großem Aufwand regeneriert werden können.:::
-
-Die Hauptgründe für FDM in der Chemie sind:
-
-- den Verlust von Daten zu verhindern und die Datensicherheit zu gewährleisten
-- die langfristige Verfügbarkeit von Forschungsdaten zu gewährleisten
-- Beschleunigung des Auffindens von Daten und Informationen
-- Verbesserung der Transparenz, Reproduzierbarkeit und Überprüfbarkeit von Forschungsergebnissen
-- Förderung der Nachhaltigkeit durch Einsparung von Zeit und Ressourcen
-- die Wiederverwendung von Daten in neuen Forschungsprojekten zu ermöglichen
-
-Nicht zuletzt und vor allem ist ein Verlust von bereits erworbenen Daten immer ein unwiederbringlicher Verlust von Wissen. [unwiederbringlicher Verlust von Wissen](https://riojournal.com/article/55852/).
-
-## Navigation durch die Knowledge Base
-
-:::ANLEITUNG FÜR DIE ERSTEN SCHRITTE:
-Die Wissensdatenbank bietet verschiedene Einstiegspunkte, die Ihnen die Navigation auf der Website erleichtern und die gezielte Suche nach Informationen vereinfachen. Beginnen Sie damit, mehr über RDM zu erfahren, indem Sie eine Domäne oder eine Rolle auswählen, sich die Artikel zum Umgang mit Daten ansehen oder Informationen über elektronische Laborjournale als Teil eines Smartlab finden. Auch Informationen über die Veröffentlichung von Daten werden bereitgestellt.
+:::danger Notice:                                
+Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal, hence, older data can be reused for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be regenerated with great effort. 
 :::
 
-### Domänen-spezifische Information
+Main motivations for RDM in chemistry are:
 
-Die Domänenseiten stellen einen beispielhaften Arbeitsablauf für verschiedene chemische Disziplinen entlang des Lebenszyklus von Forschungsdaten dar. Mehrere Domänen werden in einem Benutzerprofil dargestellt. Es werden Leitlinien für alle beteiligten Digitalisierungsschritte bereitgestellt und bereichsspezifische Best Practices für FAIRe Daten angegeben. Finden Sie heraus, wie Sie gutes FDM und FAIRe Wissenschaft im Kontext Ihrer eigenen Disziplin anwenden können!
+- to prevent the loss of data and ensure data security
+- to warrant long-term availability of research data 
+- to accelerate retrieval of data and information
+- to enhance transparency, reproducibility allow verifiability of research findings
+- to boost sustainability by saving time and resources
+- to enable data reuse in new research projects
 
-<IntroButton url={"/docs/domain_guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domänen"} />
+At least and most importantly a loss of previously acquired data is always an [irretrievable loss of knowledge](https://riojournal.com/article/55852/).
 
-### Rollen-spezifische Information
+## Navigation through knowledge base
 
-Die Rollenseiten konzentrieren sich auf rollenspezifische Anforderungen und beantworten die Fragen, warum FDM wichtig ist und wie es umgesetzt werden kann. Verschaffen Sie sich einen schnellen Überblick über alle wichtigen FDM-Informationen zu Ihrer Rolle!
+:::info Guidance for getting started:
+The knowledge base offers different points of entry that help you in navigating the site and simplify the targeted search for information. Start learning more about RDM by selecting a domain or role, viewing the handling data articles, or finding information about electronic lab notebooks as part of a smartlab. Information on the publication of data is also provided.
+:::
+
+### Domain-specific information
+
+The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline!
+
+<IntroButton url={"/docs/domain_guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domains"} />
+
+### Role-specific information
+
+The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role!
 
 <IntroButton url={"/docs/role_guide/"} imgUrl={"/img/nfdi4chem_Roles.svg"} text={"Roles"} />
 
-### Umgang mit Daten
+### Handling data
 
-Im Abschnitt über den Umgang mit Daten werden allgemeine Probleme und Herausforderungen im Zusammenhang mit RDM erläutert. Problematische Aspekte des Umgangs mit Daten werden betrachtet, angefangen bei der Erstellung von Datenmanagementplänen, der Datenorganisation und der Datendokumentation. Darüber hinaus werden auch Aspekte der Datenspeicherung und -archivierung behandelt.
+The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Moreover, aspects on data storage and archiving are also covered.
 
 <IntroButton url={"/docs/data_guide/"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
 
 ### Smartlab
 
-Um vollständig digitale Arbeitsabläufe in der Chemie zu ermöglichen, ist die Entwicklung und Bereitstellung einer modularen virtuellen Laborumgebung mit Konzepten, Diensten und Software (smartlab) unerlässlich. Elektronische Labornotizbücher sind ein wichtiger Bestandteil des smartlab, ebenso wie die Integration von analytischen Instrumenten und der Datentransfer zu Repositorien.
+To enable fully digital workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab, as well as integration of analytical instrumentation and data transfer to repositories.
 
 <IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_SmartLab.svg"} text={"Smartlab"} />
 
-### Datenpublikation
+### Data Publication
 
-In der Rubrik Datenpublikation finden Sie alle wichtigen Informationen zum Thema Datenpublikation. Dazu gehören Gründe zur Veröffentlichung von Forschungsdaten, Wege zur Veröffentlichung von Daten, Empfehlungen für zu verwendende Forschungsdaten-Repositorien, Best Practices und Aspekte der maschinellen Verwertbarkeit.  
+In the category of data publication you will find all the important information on the topic of data publication. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.  
 
 <IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
