--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/20_physical_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/20_physical_chemistry.mdx
@@ -11,26 +11,27 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 
 :::info Summary:
 
-Physical chemistry is an interdisciplinary science at the frontier between chemistry and physics, whose topics go beyond the classical areas of the respective individual sciences. While preparative chemistry focuses on questions of the methodology of chemical synthesis of known and new substances, physical chemistry attempts to describe the properties of substances and their transformation by applying concepts of physics to objects of chemistry by means of theoretical and experimental methods. Along with organic and inorganic chemistry, physical chemistry therefore represents one of the three key disciplines of "classical" chemistry, since it provides the theoretical basis for technical chemistry and process engineering. Its knowledge is also an integral part of many other disciplines and is used, for example, for description and understanding in biology and medicine, meteorology as well as the earth sciences. Due to this great interdisciplinarity and the use of numerous physicochemical methods in almost all areas of chemistry, a complete description of physical chemistry as profile is hardly possible, which is why this article explicitly makes no claim to do so.
+Die physikalische Chemie ist eine interdisziplinäre Wissenschaft im Grenzbereich zwischen Chemie und Physik, deren Themen über die klassischen Bereiche der jeweiligen Einzelwissenschaften hinausgehen. Während sich die präparative Chemie auf Fragen der Methodik der chemischen Synthese bekannter und neuer Stoffe konzentriert, versucht die physikalische Chemie, die Eigenschaften von Stoffen und deren Umwandlung zu beschreiben, indem sie Konzepte der Physik mit theoretischen und experimentellen Methoden auf Objekte der Chemie anwendet. Neben der organischen und anorganischen Chemie stellt die physikalische Chemie daher eine der drei Schlüsseldisziplinen der "klassischen" Chemie dar, da sie die theoretische Grundlage für die technische Chemie und die Verfahrenstechnik liefert. Ihr Wissen ist aber auch integraler Bestandteil vieler anderer Disziplinen und wird beispielsweise zur Beschreibung und zum Verständnis in der Biologie und Medizin, der Meteorologie sowie den Geowissenschaften genutzt. Aufgrund dieser großen Interdisziplinarität und der Anwendung zahlreicher physikalisch-chemischer Methoden in fast allen Bereichen der Chemie ist eine vollständige Beschreibung der Physikalischen Chemie als Profil kaum möglich, weshalb dieser Artikel ausdrücklich keinen Anspruch darauf erhebt.
+
 :::
 
 # Methods Profiles
 
 ## EPR spectroscopy
 
-### What is it?
-- **E**lectron **P**aramagnetic **R**esonance spectroscopy belongs together with NMR (**N**uclear **M**agnetic **R**esonance) spectroscopy to the group of magnetic resonance methods
-- measures the resonant microwave absorption of a paramagnetic sample in an external magnetic field (i.e measurement needs unpaired electrons)
+### Was ist das?
+- Die **E**lektronen **P**aramagnetische **R**esonanzspektroskopie gehört zusammen mit der NMR (**N**ukleare **M**agnetische **R**esonanz) Spektroskopie zur Gruppe der magnetischen Resonanzmethoden
+- misst die resonante Mikrowellenabsorption einer paramagnetischen Probe in einem äußeren Magnetfeld (d.h. die Messung benötigt ungepaarte Elektronen)
 
-### For what?
-- provides information about the electronic/atomic structure and the chemical environment (e.g. local environmental polarity) of the sample
-- for the characterisation of molecular dynamics on the time scale of approx. 10 ps-1 μs (allows e.g. conclusions to be drawn about local nanoviscosity)
-- for distance measurements in the range of about 1-8 nm
+### Wofür?
+- liefert Informationen über die elektronische/atomare Struktur und die chemische Umgebung (z. B. lokale Umgebungspolarität) der Probe
+- zur Charakterisierung der Molekulardynamik auf der Zeitskala von ca. 10 ps-1 μs (lässt z. B. Rückschlüsse auf die lokale Nanoviskosität zu)
+- für Abstandsmessungen im Bereich von etwa 1-8 nm
 
-### What kind of data is generated?
-- almost exclusively [proprietary file formats](/docs/format_standards) (e.g. .spe or .DTA/.DSC) of the "Bruker Corporation" company
-- transfer into [open file formats](/docs/format_standards) (e.g. .txt or .csv) either via Bruker software on the measuring device itself or via tools like [SpinToolbox](https://www.spintoolbox.com/en/)
-- analysis of data using Bruker software or e.g. [EasySpin](https://www.easyspin.org/) as open-source toolbox for MATLAB
+### Welche Art von Daten wird generiert? 
+- fast ausschließlich [proprietary file formats](/docs/format_standards) (z.B. .spe oder .DTA/.DSC) der Firma "Bruker Corporation"
+- Übertragung in [open file formats](/docs/format_standards) (z.B. .txt oder .csv) entweder über Bruker-Software am Messgerät selbst oder über Tools wie [SpinToolbox](https://www.spintoolbox.com/en/)
+- Auswertung der Daten mit Bruker-Software oder z.B. [EasySpin](https://www.easyspin.org/) als Open-Source-Toolbox für MATLAB
 
 ### How to do it [FAIR](/docs/fair)?
 - [documentation of all research data](/docs/data_documentation) and [metadata](/docs/metadata) is carried out digitally using an suitable [ELN](/docs/eln) (possibly in addition to a manual laboratory notebook in paper form)
